test/error/StringInterpolatedArgError.fu
public static class Test
{
	public static bool Run()
	{
		string() s = $"|{foo}|"; //ERROR: 'foo' not found
		return true;
	}
}
